# Airkiss

./: .gitignore  CMakeLists.txt
xbuild/cmake/: hisiv100.toolchain.cmake  hisiv300.toolchain.cmake  ubuntu.toolchain.cmake
